--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -10,6 +10,9 @@ helloPanelTitle=Hello World
 openDialogButtonText=Say Hello With Dialog
 dialogCloseButtonText=Ok
 # Invoice List
+searchFieldPlaceholder=Search for Product Name
+searchFieldDescription=enter Here search word
+searchFieldLabel=searchfield
 invoiceListTitle=Invoices
 invoiceStatusA=New
 invoiceStatusB=In Progress
@@ -31,3 +34,8 @@ productRatingLabelInitial=Please rate this product
 productRatingLabelIndicator=Your rating: {0} out of {1}
 productRatingLabelFinal=Thank you for your rating!
 productRatingButton=Rate
+#Overview Page
+Overview_rootLabel=Overview Page
+Overview_headerLabel=Header
+Overview_contentLabel=Page Content
+ratingTitle=Rate the Product
